--- a/TextViewTest/Base.lproj/Main.storyboard
+++ b/TextViewTest/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="M37-Vr-DEl">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21507"/>
+        <capability name="NSView safe area layout guides" minToolsVersion="12.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,45 +675,152 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="TextViewTest" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
         </scene>
         <!--Window Controller-->
-        <scene sceneID="R2V-B0-nI4">
+        <scene sceneID="gg2-0i-fYJ">
             <objects>
-                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
-                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+                <windowController id="M37-Vr-DEl" sceneMemberID="viewController">
+                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="YFo-of-77f">
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" fullSizeContentView="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
-                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <rect key="contentRect" x="255" y="323" width="480" height="270"/>
+                        <rect key="screenRect" x="0.0" y="0.0" width="1728" height="1079"/>
+                        <view key="contentView" id="Ds9-am-Etx">
+                            <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </view>
+                        <toolbar key="toolbar" implicitIdentifier="09D11707-F4A3-4FD5-970E-AC5832E91C2B" autosavesConfiguration="NO" displayMode="iconAndLabel" sizeMode="regular" id="rKs-pg-935">
+                            <allowedToolbarItems>
+                                <toolbarItem implicitItemIdentifier="NSToolbarShowColorsItem" id="0Yq-ek-kE6"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarShowFontsItem" id="dg1-zE-JIg"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarPrintItem" id="woE-Qk-Sm3"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="MXn-hS-jDZ"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="hqD-wn-UR9"/>
+                            </allowedToolbarItems>
+                            <defaultToolbarItems>
+                                <toolbarItem reference="0Yq-ek-kE6"/>
+                                <toolbarItem reference="dg1-zE-JIg"/>
+                                <toolbarItem reference="hqD-wn-UR9"/>
+                                <toolbarItem reference="woE-Qk-Sm3"/>
+                            </defaultToolbarItems>
+                        </toolbar>
                         <connections>
-                            <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
+                            <outlet property="delegate" destination="M37-Vr-DEl" id="dRt-dZ-kws"/>
                         </connections>
                     </window>
                     <connections>
-                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
+                        <segue destination="4mS-UD-1aw" kind="relationship" relationship="window.shadowedContentViewController" id="vGj-i8-ltB"/>
                     </connections>
                 </windowController>
-                <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="Q8O-54-dEs" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="250"/>
+            <point key="canvasLocation" x="-139" y="222"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="JFn-mU-bCA">
+            <objects>
+                <splitViewController id="4mS-UD-1aw" sceneMemberID="viewController">
+                    <splitViewItems>
+                        <splitViewItem canCollapse="YES" holdingPriority="260" behavior="sidebar" id="qGm-hV-cc1"/>
+                        <splitViewItem id="uPw-u1-UrE"/>
+                    </splitViewItems>
+                    <splitView key="splitView" dividerStyle="thin" vertical="YES" id="JXW-Te-c3Z">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </splitView>
+                    <connections>
+                        <segue destination="wiO-Yg-dWt" kind="relationship" relationship="splitItems" id="xRv-3C-upw"/>
+                        <segue destination="lF6-qh-vVE" kind="relationship" relationship="splitItems" id="STb-Rk-9PW"/>
+                    </connections>
+                </splitViewController>
+                <customObject id="gjr-i6-i2E" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="553" y="226"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="hIz-AP-VOD">
+        <scene sceneID="8xz-Bn-FqM">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                <viewController id="wiO-Yg-dWt" customClass="ViewController" customModule="TextViewTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="aB3-jX-oVs">
+                        <rect key="frame" x="0.0" y="0.0" width="149" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Tl-nM-YUg">
+                                <rect key="frame" x="20" y="49" width="109" height="231"/>
+                                <clipView key="contentView" drawsBackground="NO" id="PCt-hn-7NN">
+                                    <rect key="frame" x="0.0" y="0.0" width="109" height="231"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <textView wantsLayer="YES" importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="pZ8-e6-jaA">
+                                            <rect key="frame" x="0.0" y="0.0" width="109" height="231"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <size key="minSize" width="109" height="231"/>
+                                            <size key="maxSize" width="240" height="10000000"/>
+                                            <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                        </textView>
+                                    </subviews>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="sSO-2D-1pq">
+                                    <rect key="frame" x="-100" y="-100" width="240" height="16"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="c3F-aD-N6w">
+                                    <rect key="frame" x="93" y="0.0" width="16" height="231"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ldf-D3-VsQ">
+                                <rect key="frame" x="20" y="20" width="109" height="21"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="faX-rY-3Tg">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="C5f-49-awY" firstAttribute="bottom" secondItem="Ldf-D3-VsQ" secondAttribute="bottom" constant="20" id="1dC-Wx-Kvf"/>
+                            <constraint firstItem="7Tl-nM-YUg" firstAttribute="trailing" secondItem="cTo-B9-Pln" secondAttribute="trailing" id="3Bu-WI-5SZ"/>
+                            <constraint firstItem="Ldf-D3-VsQ" firstAttribute="top" secondItem="7Tl-nM-YUg" secondAttribute="bottom" constant="8" symbolic="YES" id="XMd-Ww-kTO"/>
+                            <constraint firstItem="Ldf-D3-VsQ" firstAttribute="leading" secondItem="C5f-49-awY" secondAttribute="leading" constant="20" id="ZzB-fS-dEH"/>
+                            <constraint firstItem="7Tl-nM-YUg" firstAttribute="leading" secondItem="cTo-B9-Pln" secondAttribute="leading" id="cK7-e6-ZII"/>
+                            <constraint firstItem="7Tl-nM-YUg" firstAttribute="top" secondItem="aB3-jX-oVs" secondAttribute="top" constant="20" symbolic="YES" id="tgy-tE-m6a"/>
+                            <constraint firstItem="C5f-49-awY" firstAttribute="trailing" secondItem="Ldf-D3-VsQ" secondAttribute="trailing" constant="20" id="uFR-LI-LWI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="C5f-49-awY"/>
+                        <viewLayoutGuide key="layoutMargins" id="cTo-B9-Pln"/>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="7Tl-nM-YUg" id="y6g-w7-z25"/>
+                        <outlet property="textField" destination="Ldf-D3-VsQ" id="Adz-S9-DTk"/>
+                        <outlet property="textView" destination="pZ8-e6-jaA" id="17X-rR-kIg"/>
+                    </connections>
+                </viewController>
+                <customObject id="oxc-0H-h0K" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1072.5" y="40"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8Yi-UB-mqY">
+            <objects>
+                <viewController id="lF6-qh-vVE" sceneMemberID="viewController">
+                    <view key="view" id="nkr-FT-nlp">
+                        <rect key="frame" x="0.0" y="0.0" width="302" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <viewLayoutGuide key="safeArea" id="FcI-9P-pn4"/>
+                        <viewLayoutGuide key="layoutMargins" id="jPd-C5-j46"/>
                     </view>
                 </viewController>
-                <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="BXt-q2-EYs" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="1149" y="412"/>
         </scene>
     </scenes>
 </document>
